--- a/index.html
+++ b/index.html
@@ -1,39 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Cadastro de Veículos Seminovos</title>
-<link rel="stylesheet" type="text/css" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cadastro de Veículos Seminovos</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-   <center><h1>Cadastro de Veiculos Seminovos</h1></center>
+               
+    <center><h1>Cadastro de Veículos Seminovos</h1></center>
 
+    <form id="vehicleForm">
+        <label for="manufacturer">Fabricante:</label>
+        <input type="text" id="manufacturer" required>
 
-<form id="vehicleForm">
-    <label for="manufacturer">Fabricante:</label>
-    <input type="text" id="manufacturer" required>
+        <label for="model">Modelo:</label>
+        <input type="text" id="model" required>
 
-    <label for="model">Modelo:</label>
-    <input type="text" id="model" required>
+        <label for="version">Versão:</label>
+        <input type="text" id="version" required>
 
-    <label for="version">Versão:</label>
-    <input type="text" id="version" required>
+        <label for="color">Cor:</label>
+        <input type="text" id="color" required>
 
-    <label for="color">Cor:</label>
-    <input type="text" id="color" required>
+        <label for="manufactureYear">Ano de Fabricação:</label>
+        <input type="number" id="manufactureYear" required>
 
-    <label for="manufactureYear">Ano de Fabricação:</label>
-    <input type="number" id="manufactureYear" required>
+        <label for="registrationDate">Data de Cadastro:</label>
+        <input type="text" id="registrationDate" readonly>
 
-    <label for="registrationDate">Data de Cadastro:</label>
-    <input type="date" id="registrationDate" required>
+        <button type="submit">Cadastrar</button>
+        <button type="button" onclick="window.location.href = 'veiculos_cadastrados.html'">Visualizar Veículos Cadastrados</button>
+    </form>
 
-    <button type="submit">Cadastrar</button>
-    <button type="button" onclick="window.location.href = 'veiculos_cadastrados.html'">Visualizar Veículos Cadastrados</button>
-</form>
+       <footer>
+       <center><p>Projeto Integrador ADS - Guilherme Paulino da Silva</p></center> 
+       <center><p>2024</p></center>
 
-<script src="script.js"></script>
+    <script src="index.js"></script>
 
 </body>
 </html>
